Fix: Title blur on mobile.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -106,7 +106,6 @@ section#picture1{
 }
 div#subtitle{
         z-index: 5;
-        filter: blur(.15px);
         display: flex;
         justify-content: center;
         text-align: center;
@@ -427,14 +426,9 @@ section#footer{
         transition: color .6s;
     }
     div a i.up:hover{
-        color: $dark;
+        color: $dark-text;
     }
 
-    body div#subtitle div#sub-wrapper {
-         h1, h2 {
-            filter: blur(0px);
-        }
-    }
     body section#team div.content-frame div.person{
         flex-direction: column;
         align-items: center;
@@ -615,4 +609,13 @@ section#footer{
     height: 250px;
     max-height: 250px;
    }
+}
+
+//------min-width------
+@media only screen and (min-width: 740px) {
+    body div#subtitle div#sub-wrapper {
+         h1, h2 {
+            filter: blur(.5px);
+        }
+    }
 }
